--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             -moz-box-sizing: border-box;
             box-sizing: border-box;
             background: hsl(0, 100%, 74%);
-            background-image: url("images/bg-intro-desktop.png");
+
             font-family: 'Poppins', sans-serif;
         }
         div.container {
@@ -88,6 +88,25 @@
         .button:hover {
             opacity: 0.7;
         }
+        @media screen and (max-width: 1440px){
+            body.main{
+                background-image: url("images/bg-intro-desktop.png");
+            }
+            div.container {
+                display: flex;
+                margin: 5% 10%;
+            }
+        }
+        @media screen and (max-width: 375px){
+            body.main{
+                background-image: url("images/bg-intro-mobile.png");
+            }
+            div.container {
+                display: block;
+                float: none;
+                margin: 5% 10%;
+            }
+        }
     </style>
 </head>
 <body class="main">
@@ -103,7 +122,7 @@
             <div class="form">
                 <form id="form" action="">
                     <div class="form-group">
-                        <input id="firstname" type="text" class="form-input input-error" placeholder="First Name">
+                        <input id="firstname" type="text" class="form-input" placeholder="First Name">
                         <span id="firstname_error" class="error" style="display: none;">First Name cannot be empty</span>
                     </div>
                     <div class="form-group">
@@ -132,19 +151,22 @@
             firstname = document.getElementById("firstname").value;
             if (firstname == ''){
                 document.getElementById("firstname_error").style.display = 'block';
+                document.getElementById("firstname").classList.add("input-error");
             }
             else {
                 document.getElementById("firstname_error").style.display = 'none';
-
+                document.getElementById("firstname").classList.remove("input-error");
             }
         });
         document.getElementById("lastname").addEventListener("change", () => {
             lastname = document.getElementById("lastname").value;
             if (lastname == ''){
                 document.getElementById("lastname_error").style.display = 'block';
+                document.getElementById("lastname").classList.add("input-error");
             }
             else {
                 document.getElementById("lastname_error").style.display = 'none';
+                document.getElementById("lastname").classList.remove("input-error");
 
             }
         });
@@ -152,20 +174,22 @@
             email = document.getElementById("email").value;
             if ((email == '') || (email.match(/@/) != '@')){
                 document.getElementById("email_error").style.display = 'block';
+                document.getElementById("email").classList.add("input-error");
             }
             else {
                 document.getElementById("email_error").style.display = 'none';
-
+                document.getElementById("email").classList.remove("input-error");
             }
         });
         document.getElementById("password").addEventListener("change", () => {
             password = document.getElementById("password").value;
             if (password == ''){
                 document.getElementById("password_error").style.display = 'block';
+                document.getElementById("password").classList.add("input-error");
             }
             else {
                 document.getElementById("password_error").style.display = 'none';
-
+                document.getElementById("password").classList.remove("input-error");
             }
         });
 
